# creditcoin-legacy

./: .gitignore  CODEOWNERS  SECURITY.md  creditcoin.sln  patch.diff  readme.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: container.yml  sonarcloud.yml
Creditcoin/: creditcoin.sln
Creditcoin/PoW/: Dockerfile  block_validator.py  executor.py  processor_pb2.py  publisher.py  scheduler.py  setup.py  (+1 more)
DependencyLicense/: NOTICE
PoW/: Dockerfile
Sawtooth/: creditcoin.sln  sawtooth-default.yaml
cc_convertdb/: setup.py
ccconsensus/: Cargo.toml  Dockerfile
ccconsensus/src/: engine.rs  lib.rs  macros.rs  main.rs  work.rs
ccconsensus/src/block/: block_ancestors.rs  block_consensus.rs  block_header.rs  block_printer.rs  mod.rs
ccconsensus/src/miner/: answer.rs  challenge.rs  channel.rs  miner.rs  mod.rs  worker.rs
ccconsensus/src/node/: config.rs  guard.rs  mod.rs  node.rs  service.rs  state.rs
ccconsensus/src/primitives/: hash.rs  mod.rs
ccconsensus/src/utils/: hex.rs  mod.rs  time.rs
ccgateway/: Dockerfile  appsettings.json  ccgateway.csproj
ccprocessor/: Address.pb.h  BidOrder.pb.cc  DealOrder.pb.cc  DealOrder.pb.h  Dockerfile  Fee.pb.h  Offer.pb.cc  RepaymentOrder.pb.h  ccprocessor.vcxproj.filters  processor.cpp  targetver.h
ccprocessorLinux/: ccprocessorLinux.vcxproj
proto/: Address.proto  DealOrder.proto  Fee.proto  Offer.proto  Wallet.proto
transitioning/: creditcoin-default.yaml  creditcoin-transition.1.0.5.collecting.yaml  creditcoin-transition.1.2.4.revalidation.yaml  notes.txt  transcheck.ps1  transition.ps1
(+236 files in other folders)
